# pkg/openapi/server.spec.yaml
@@ -1129,7 +1129,7 @@ components:
       description: An organization ID.
       required: true
       schema:
-        type: string
+        $ref: '#/components/schemas/organizationId'
     serviceAccountIDParameter:
       name: serviceAccountID
       in: path
@@ -1150,7 +1150,7 @@ components:
       description: A project ID.
       required: true
       schema:
-        type: string
+        $ref: '#/components/schemas/projectId'
     groupidParameter:
       name: groupid
       in: path
@@ -1186,6 +1186,22 @@ components:
       schema:
         type: string
   schemas:
+    organizationId:
+      description: An organization ID.
+      type: string
+      format: uuid
+      x-go-type: identityids.OrganizationID
+      x-go-type-import:
+        name: identityids
+        path: github.com/unikorn-cloud/identity/pkg/ids
+    projectId:
+      description: A project ID.
+      type: string
+      format: uuid
+      x-go-type: identityids.ProjectID
+      x-go-type-import:
+        name: identityids
+        path: github.com/unikorn-cloud/identity/pkg/ids
     oauth2Error:
       description: Generic error message, compatible with oauth2.
       type: object
